--- a/assets/app/auction/auction.component.html
+++ b/assets/app/auction/auction.component.html
@@ -1,5 +1,17 @@
-<form>
-    <input type="datetime" name="startDate" />
-    <input type="datetime" name="endDate" />
-    <input type="number" name="startingBid" />
-</form>
+<div class="col-md-8 col-md-offset-2">
+    <form ngForm="auction" (ngSubmit)="save()">
+    <div class="form-group">
+        <label>Start Date: </label>
+        <input type="datetime" name="startDate" [(ngModel)]="startDate" class="form-control" required/>
+    </div>
+    <div class="form-group">
+        <label>End Date: </label>
+        <input type="datetime" name="endDate" class="form-control" required/>
+    </div>
+    <div class="form-group">
+        <label>Minimun Bid Amount: </label>
+        <input type="number" name="startingBid" class="form-control" required/>
+    </div>
+    <button class="btn btn-primary" type="submit" [disabled]="validForm">Submit</button>
+    </form>
+</div>
