--- a/assets/app/header/header.component.html
+++ b/assets/app/header/header.component.html
@@ -6,8 +6,9 @@
 
         <div class="navbar-default">
             <ul class="nav navbar-nav">
-                <li routerLinkActive="active"><a routerLink="/user">User</a></li>
-                <li routerLinkActive="active"><a routerLink="/properties">Properties</a></li>
+                    <li routerLinkActive="active"><a routerLink="/auction">Auction</a></li>
+                    <li routerLinkActive="active"><a routerLink="/user">User</a></li>
+                    <li routerLinkActive="active"><a routerLink="/properties">Properties</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown" appDropdown>
