view property detail

--- a/assets/app/property/property-edit/property-edit.component.html
+++ b/assets/app/property/property-edit/property-edit.component.html
@@ -3,15 +3,6 @@
         <form [formGroup]="propertyForm" (ngSubmit)="onSubmit()">
             <div class="row">
                 <div class="col-xs-12">
-                    <button
-                            type="submit"
-                            class="btn btn-success"
-                            [disabled]="!propertyForm.valid">Save</button>
-                    <button type="button" class="btn btn-danger" (click)="onCancel()">Cancel</button>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-xs-12">
                     <div class="form-group">
                         <label for="name">Name</label>
                         <input
@@ -20,6 +11,16 @@
                                 formControlName="name"
                                 class="form-control">
                     </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-12">
+                    <button
+                            type="submit"
+                            class="btn btn-success"
+                            [disabled]="!propertyForm.valid">Save
+                    </button>
+                    <button type="button" class="btn btn-danger" (click)="onCancel()">Cancel</button>
                 </div>
             </div>
         </form>
