--- a/assets/app/property/property-detail/property-detail.component.html
+++ b/assets/app/property/property-detail/property-detail.component.html
@@ -8,5 +8,6 @@
     <div class="col-xs-12">
         <button class="btn btn-success" (click)="onEditProperty()">Edit</button>
         <button class="btn btn-danger" (click)="onDeleteProperty()">Delete</button>
+        <button class="btn btn-info" (click)="onViewAuction()">Auction</button>
     </div>
 </div>
