--- a/assets/app/app.component.html
+++ b/assets/app/app.component.html
@@ -1,6 +1,9 @@
+<app-header></app-header>
 <div class="container">
-    <app-header></app-header>
-    <hr>
-    <router-outlet></router-outlet>
+    <div class="row">
+        <div class="col-md-12">
+            <router-outlet></router-outlet>
+        </div>
+    </div>
 </div>
 <app-error></app-error>
