--- a/assets/app/property/property-list/property-item/property-item.component.html
+++ b/assets/app/property/property-list/property-item/property-item.component.html
@@ -5,13 +5,12 @@
         class="list-group-item clearfix">
     <div class="pull-left">
         <h4 class="list-group-item-heading">{{ property.name }}</h4>
-        <!--<p class="list-group-item-text">{{ recipe.description }}</p>-->
+        <p class="list-group-item-text">{{ property.facilities }}</p>
     </div>
-    <!--<span class="pull-right">-->
-        <!--<img-->
-                <!--[src]="recipe.imagePath"-->
-                <!--alt="{{ recipe.name }}"-->
-                <!--class="img-responsive"-->
-                <!--style="max-height: 50px;">-->
-      <!--</span>-->
+    <span class="pull-right">
+        <img
+                [src]="property.imagePath"
+                class="img-responsive"
+                style="max-height: 50px;">
+      </span>
 </a>
