--- a/assets/app/user/signup.component.html
+++ b/assets/app/user/signup.component.html
@@ -32,6 +32,18 @@
                     class="form-control"
                     formControlName="password">
         </div>
+        <div class="form-group">
+            <label for="role">Role</label>
+            <select
+                    id="role"
+                    class="form-control"
+                    name="role"
+                    formControlName="role">
+                <option value="user">User</option>
+                <option value="admin">Administrator</option>
+            </select>
+        </div>
+
         <button
                 class="btn btn-primary"
                 type="submit"
