--- a/assets/app/header/header.component.html
+++ b/assets/app/header/header.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-default">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a href="#" class="navbar-brand">Auction</a>
+            <a routerLink="/home" class="navbar-brand">Home</a>
         </div>
 
         <div class="navbar-default">
