auction list change

--- a/assets/app/admin/auction-list.component.html
+++ b/assets/app/admin/auction-list.component.html
@@ -1,25 +1,28 @@
 <h1>{{title}}</h1>
 
 <table class="table">
-        <tr>
-				<th>Property Name</th>
-				<th>Owner Description</th>
-				<th>Expected Price</th>
-				<th>Start Date</th>
-				<th>End Date</th>
-				<th>Status</th>
-			</tr>
+    <tr>
+        <th>Property Name</th>
+        <th>Owner Description</th>
+        <th>Expected Price</th>
+        <th>Start Date</th>
+        <th>End Date</th>
+        <th>Status</th>
+        <th>Action</th>
+    </tr>
     <tr *ngFor="let auction of auctions">
-        <td>{{auction.property.name}}</td>
-        <td>{{auction.owner.name}}</td>
+        <td>
+            <p *ngIf="auction.property!=null">{{auction.property.name}}</p>
+        </td>
+        <td></td>
+        <!-- <td>{{auction.owner.name}}</td> -->
         <td>{{auction.property.expectedPrice}}</td>
-        <td>{{auction.startDate}}</td>
-        <td>{{auction.endDate}}</td>
+        <td>{{auction.startTime | date:"medium" }}</td>
+        <td>{{auction.endTime | date:"medium"}}</td>
         <td>{{auction.status}}</td>
         <td>
             <button (click)="approve(auction)">Approve</button>
-        </td>
-        <td>
+       
             <button (click)="reject(auction)">Reject</button>
         </td>
     </tr>
