--- a/assets/app/auction/home/home.component.html
+++ b/assets/app/auction/home/home.component.html
@@ -12,15 +12,16 @@
                 <div class="property-card-data">
 
                     <div class="addressStreet">{{auction.property.name}}</div>
-                    <div class="addressCityState">{{auction.property.address1}},{{auction.property.address2}},{{auction.property.city}}</div>
+                    <div class="addressCityState">{{auction.property.address1}} ,{{auction.property.address2}} ,{{auction.property.city}}</div>
+                    <div class="eventStatus">{{auction.property.state}} - {{auction.property.zip}}</div>
 
                 </div>
                 <!-- <div class="property-card-footer">
                     <div class="eventStatus">{{auction.startTime}}- {{auction.endTime}}</div>
                 </div> -->
-                <div class="property-card-footer">
+                <!-- <div class="property-card-footer">
                     <div class="eventStatus">{{auction.property.state}}- {{auction.property.zip}}</div>
-                </div>
+                </div> -->
 
 
           
