--- a/assets/app/auction/home/home.component.html
+++ b/assets/app/auction/home/home.component.html
@@ -1,30 +1,33 @@
-<div class="content-container">
-    <h1>Auctions</h1>
+<div class="row">
+
     <div *ngFor="let auction of auctions" class="asset-tile">
-        <!-- <a routerLink="auction/bid/{{auction.id}}"> -->
+
         <div *ngIf="auction.property != null" (click)="viewDetail(auction)">
-                
-             <!-- <a routerLink="auction/bid/{{auction.id}}"> -->
 
-                <div class="property-card-image">
+            <div class="col-sm-6 col-md-4">
+                <div class="thumbnail">
+
+
                     <img src="{{auction.property.imagePath}}" alt="{{auction.property.name}}" style="width: 100%" />
-                </div>
-                <div class="property-card-data">
 
-                    <div class="addressStreet">{{auction.property.name}}</div>
-                    <div class="addressCityState">{{auction.property.address1}} ,{{auction.property.address2}} ,{{auction.property.city}}</div>
-                    <div class="eventStatus">{{auction.property.state}} - {{auction.property.zip}}</div>
+                    <div class="caption">
 
-                </div>
-                <!-- <div class="property-card-footer">
+                        <div class="addressStreet">{{auction.property.name}}</div>
+                        <div class="addressCityState">{{auction.property.address1}} ,{{auction.property.address2}} ,{{auction.property.city}}</div>
+                        <div class="eventStatus">{{auction.property.state}} - {{auction.property.zip}}</div>
+
+                    </div>
+                    <!-- <div class="property-card-footer">
                     <div class="eventStatus">{{auction.startTime}}- {{auction.endTime}}</div>
                 </div> -->
-                <!-- <div class="property-card-footer">
+                    <!-- <div class="property-card-footer">
                     <div class="eventStatus">{{auction.property.state}}- {{auction.property.zip}}</div>
                 </div> -->
+                </div>
+            </div>
 
 
-          
+
         </div>
     </div>
 </div>
