--- a/assets/app/auction/home/home.component.html
+++ b/assets/app/auction/home/home.component.html
@@ -15,14 +15,9 @@
                         <div class="addressStreet">{{auction.property.name}}</div>
                         <div class="addressCityState">{{auction.property.address1}} ,{{auction.property.address2}} ,{{auction.property.city}}</div>
                         <div class="eventStatus">{{auction.property.state}} - {{auction.property.zip}}</div>
-
+                        <p><button class="btn btn-info">View Detail</button> </p>
                     </div>
-                    <!-- <div class="property-card-footer">
-                    <div class="eventStatus">{{auction.startTime}}- {{auction.endTime}}</div>
-                </div> -->
-                    <!-- <div class="property-card-footer">
-                    <div class="eventStatus">{{auction.property.state}}- {{auction.property.zip}}</div>
-                </div> -->
+
                 </div>
             </div>
 
