auction status changes

--- a/assets/app/auction/home/home.component.html
+++ b/assets/app/auction/home/home.component.html
@@ -7,9 +7,9 @@
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
 
-
-                    <img src="{{auction.property.imagePath}}" alt="{{auction.property.name}}" style="width: 100%" />
-
+<div style="height:200px">
+                    <img src="{{auction.property.imagePath}}" alt="{{auction.property.name}}" class="img-responsive"/>
+                </div>
                     <div class="caption">
 
                           <h3>{{auction.property.name}} <button class="btn btn-info">View Detail</button> </h3>  
