--- a/assets/app/auction/home/home.component.html
+++ b/assets/app/auction/home/home.component.html
@@ -7,25 +7,25 @@
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
 
-<div style="height:200px">
-                    <img src="{{auction.property.imagePath}}" alt="{{auction.property.name}}" class="img-responsive"/>
-                </div>
+                    <div style="height:220px">
+                        <img src="{{auction.property.imagePath}}" alt="{{auction.property.name}}" class="img-responsive" />
+                    </div>
                     <div class="caption">
 
-                        <h3>{{auction.property.name}}<button class="btn btn-info">View Detail</button></h3>>
+                        <h3>{{auction.property.name}}
+                            <button class="btn btn-info">View Detail</button>
+                        </h3>
+                        <div class="well">
+                            <div>Auction Start Date : {{auction.startTime | dateFormat}}</div>
 
-                        <div>Auction Start Date : {{auction.startDate | dateFormat}}</div>
+                            <div class="addressCityState">{{auction.property.address1}} ,{{auction.property.address2}} ,{{auction.property.city}}</div>
+                            <div class="eventStatus">{{auction.property.state}} - {{auction.property.zip}}</div>
+                        </div>
 
-                        <div class="addressCityState">{{auction.property.address1}} ,{{auction.property.address2}} ,{{auction.property.city}}</div>
-                        <div class="eventStatus">{{auction.property.state}} - {{auction.property.zip}}</div>
-                       
                     </div>
 
                 </div>
             </div>
-
-
-
         </div>
     </div>
 </div>
