--- a/assets/app/user/signup.component.html
+++ b/assets/app/user/signup.component.html
@@ -7,6 +7,10 @@
                     id="firstName"
                     class="form-control"
                     formControlName="firstName">
+            <span *ngIf="!signupForm.get('firstName').valid && signupForm.get('firstName').touched" class="help-block">
+                <span *ngIf="signupForm.get('firstName').errors['required']">This field is required!</span>
+                <span *ngIf="signupForm.get('firstName').errors['minlength']">Please enter at least 4 characters!</span>
+            </span>
         </div>
         <div class="form-group">
             <label for="lastName">Last Name</label>
@@ -15,14 +19,22 @@
                     id="lastName"
                     class="form-control"
                     formControlName="lastName">
+            <span *ngIf="!signupForm.get('lastName').valid && signupForm.get('lastName').touched" class="help-block">
+                <span *ngIf="signupForm.get('lastName').errors['required']">This field is required!</span>
+                <span *ngIf="signupForm.get('lastName').errors['minlength']">Please enter at least 4 characters!</span>
+            </span>
         </div>
         <div class="form-group">
-            <label for="email">Mail</label>
+            <label for="email">E-mail</label>
             <input
                     type="email"
                     id="email"
                     class="form-control"
                     formControlName="email">
+            <span *ngIf="!signupForm.get('email').valid && signupForm.get('email').touched" class="help-block">
+                <span *ngIf="signupForm.get('email').errors['pattern']">Please input valid email address!</span>
+                <span *ngIf="signupForm.get('email').errors['required']">This field is required!</span>
+            </span>
         </div>
         <div class="form-group">
             <label for="password">Password</label>
@@ -31,6 +43,11 @@
                     id="password"
                     class="form-control"
                     formControlName="password">
+            <span *ngIf="!signupForm.get('password').valid && signupForm.get('password').touched" class="help-block">
+                <span *ngIf="signupForm.get('password').errors['minlength']">Password needs at least 6 characters!</span>
+                <span *ngIf="signupForm.get('password').errors['required']">This field is required!</span>
+                <span *ngIf="signupForm.get('password').errors['passwordIsForbidden']">Password is too popular!</span>
+            </span>
         </div>
         <div class="form-group">
             <label for="role">Role</label>
