--- a/assets/app/header/header.component.html
+++ b/assets/app/header/header.component.html
@@ -6,10 +6,10 @@
 
         <div class="navbar-default">
             <ul class="nav navbar-nav">
-                <li routerLinkActive="active"><a routerLink="/auction">Auction</a></li>
+                <li routerLinkActive="active" *ngIf="userService.isAdmin()"><a routerLink="/admin/auctionList">Auction</a></li>
                 <!--<li routerLinkActive="active"><a routerLink="/user">User</a></li>-->
                 <!--<li routerLinkActive="active" *ngIf="userService.isLoggedIn()"><a routerLink="/properties">Properties</a></li>-->
-                <li routerLinkActive="active"><a routerLink="/properties">Properties</a></li>
+                <li routerLinkActive="active"><a routerLink="/properties">My Properties</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <ng-template [ngIf]="!userService.isLoggedIn()">
